# praxis-lite

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  ARCHITECTURE.md  AUDIT.md  Dockerfile  LICENSE  PRD.md  README.md  pyproject.toml  render.yaml  run.py
docs/: ARCHITECTURE_MONICA.md  DAYS_9_10_REMAINING.md  DEMO_SCRIPT.md  DEMO_SCRIPT_DOMINIC.md  INTEGRATION_SMOKE.md  KNOWLEDGE_MODULE_GAP_ANALYSIS.md  PLAN_ALIGNMENT_GAP_CHECKLIST.md  RDS_KG_DEPLOY.md  REHEARSAL_LOG.md  RENDER_DEPLOY.md  STANDUP_TEMPLATE.md  monica-wireframes.md
docs/brainstorms/: 2026-06-18-knowledge-baseline-requirements.md
docs/ideation/: 2026-06-18-knowledge-tools-baseline-ideation.md
docs/integration/: candidate-api-v1.md  eval-metrics-v1.md  wire-up.md
docs/matt/: MCP_SERVER.md
docs/monica/: ARCHITECTURE_MONICA.md  DAYS_9_10_REMAINING.md  DEMO_SCRIPT.md  INTEGRATION_SMOKE.md  KNOWLEDGE_MODULE_GAP_ANALYSIS.md  Monica-Peters-Dashboard-Plan.md  PLAN_ALIGNMENT_GAP_CHECKLIST.md  RDS_KG_DEPLOY.md  REHEARSAL_LOG.md  RENDER_DEPLOY.md  STANDUP_TEMPLATE.md  monica-wireframes.md
docs/plans/: Dominic-Antonelli-Architecture-Eval-PlanDRAFT.md  Matthew-Daw-ML-Pipeline-PlanDRAFT.md  PRAXIS_Project_Plan.html  proposal-praxis.md
docs/standup-notes/: 2026-06-19.md
frontend/: mock_data.py
frontend-react/: index.html  package-lock.json  package.json  render.yaml  tsconfig.json  vite.config.ts
frontend-react/public/: mock-candidates.json
frontend-react/src/: App.test.tsx  App.tsx  style.css
knowledge/: __init__.py  run.py  wiring.py
scripts/: export-mock-candidates.py
(+94 files in other folders)
